manifest/keycloak/httproute.yaml
---
# HTTPRoute for Keycloak identity provider
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak
  namespace: default
spec:
  parentRefs:
    - name: keycloak
      sectionName: https
  hostnames:
    - auth.expmonitor.freeddns.org
  rules:
    - backendRefs:
        - name: keycloak
          port: 8080
